tests/invalid/directly_call_a_special_method.ri
struct Dropper {
    func __drop__(self) {
        _ = self;
    }
}

func main() {
    d := Dropper();
    d.__drop__();
}
