tests/invalid/directly_call_a_special_method.out
tests/invalid/directly_call_a_special_method.ri:9:5: error: cannot call a special method directly
    9 |     d.__drop__();
      |     ^~~~~~~~~~~~
rivet: error: could not compile module `directly_call_a_special_method`, aborting due to previous error